--- a/package.json
+++ b/package.json
@@ -5,29 +5,28 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "node app.js",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "express": "^4.17.1",
     "lucide-react": "^0.468.0",
-    "next": "12.3.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "sharp": "^0.29.3"
+    "next": "14.0.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "sharp": "^0.33.1"
   },
   "devDependencies": {
-    "@types/node": "^14",
-    "@types/react": "17.0.2",
-    "@types/react-dom": "17.0.2",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "eslint": "^7",
-    "eslint-config-next": "12.3.4",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^4.5.5"
+    "typescript": "^5"
   },
   "engines": {
-    "node": ">=10.24.1"
+    "node": ">=18.0.0"
   }
 }
