--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "clean": "rimraf .next out",
-    "prebuild": "npm run clean"
+    "prebuild": "npm run clean",
+    "export": "next export"
   },
   "dependencies": {
     "lucide-react": "^0.468.0",
