--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "clean": "rimraf .next out",
-    "prebuild": "npm run clean",
-    "export": "next export"
+    "clean": "rimraf .next out"
   },
   "dependencies": {
     "lucide-react": "^0.468.0",
