--- a/package.json
+++ b/package.json
@@ -3,17 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
     "lucide-react": "^0.468.0",
     "next": "14.0.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sharp": "^0.33.1"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "20.10.6",
