--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,12 @@
 {
   "version": 2,
-  "framework": "nextjs"
+  "buildCommand": "npm run build",
+  "outputDirectory": "out",
+  "framework": null,
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/$1"
+    }
+  ]
 }
