--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "export": "next build && next export"
+    "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/edge": "^1.1.1",
     "lucide-react": "^0.468.0",
     "next": "14.0.4",
     "react": "18.2.0",
