--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@vercel/edge": "^1.1.1",
     "lucide-react": "^0.468.0",
     "next": "14.0.4",
     "react": "18.2.0",
@@ -25,5 +24,8 @@
     "postcss": "8.4.32",
     "tailwindcss": "3.4.0",
     "typescript": "5.3.3"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
