--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,5 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
-  "outputDirectory": "out",
-  "framework": "nextjs",
-  "regions": ["bom1"],
-  "functions": {
-    "app/**/*": {
-      "runtime": "edge",
-      "memory": 128
-    }
-  },
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/$1"
-    }
-  ]
+  "buildCommand": "next build",
+  "framework": "nextjs"
 }
