--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.27.3",
+    "framer-motion": "^11.16.4",
     "lucide-react": "^0.468.0",
     "next": "14.0.4",
     "next-themes": "^0.4.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@types/node": "20.10.6",
